fix: Atlas tooltip not showing issue fixed

--- a/webapp/src/components/Atlas/Popup/Popup.css
+++ b/webapp/src/components/Atlas/Popup/Popup.css
@@ -1,6 +1,6 @@
 .AtlasPopup {
   position: absolute;
-  z-index: 100;
+  z-index: 1000 !important;
   padding: 20px;
   background: black;
   margin-left: -320px;
@@ -42,7 +42,7 @@
   font-size: 14px;
   margin-bottom: 0px;
   margin-top: 0px;
-  padding: 0px
+  padding: 0px;
 }
 
 .AtlasPopup .dcl.mana + .dcl.mana {
